--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Bitwise;
 }
 
 .App-logo {
@@ -25,4 +26,11 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@font-face {
+  font-family: 'Bitwise';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/bitwise.ttf');
 }
